[gd_scene load_steps=6 format=3 uid="uid://c0bd18xd2ewqv"]

[ext_resource type="Script" uid="uid://bangtvirq51f0" path="res://level_stuff/interactables/barrier_break.gd" id="1_v022d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ucjvr"]
size = Vector2(70, 70)

[sub_resource type="Curve" id="Curve_1ykfo"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.494382, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y27nv"]
size = Vector2(70, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f0y8n"]
size = Vector2(70, 70)

[node name="barrier_break" type="Node2D" groups=["barrier_break"]]
script = ExtResource("1_v022d")

[node name="Area2D" type="Area2D" parent="." groups=["enemy_body", "no heal_cooldown reduction"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_ucjvr")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.0980392)
amount = 40
emission_shape = 3
emission_rect_extents = Vector2(30, 30)
gravity = Vector2(0, 0)
angular_velocity_min = -180.0
angular_velocity_max = 180.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 20.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_1ykfo")
color = Color(0, 1, 0, 1)

[node name="bulletm2" type="StaticBody2D" parent="."]
visible = false
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="bulletm2"]
shape = SubResource("RectangleShape2D_y27nv")

[node name="level_detect" type="Area2D" parent="." groups=["level_detect"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="level_detect"]
shape = SubResource("RectangleShape2D_f0y8n")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
